--- a/ProjetoFinal-LMR/comprar.html
+++ b/ProjetoFinal-LMR/comprar.html
@@ -130,22 +130,27 @@
 
                         <div class="check-btn">
                             <input type="checkbox" class="form_new_input" id="html5" name="aprender" value="html5">
-                            <label for="html5" class="form_label check_label"> <span class="check_new_btn"></span> 1</label>
+                            <label for="html5" class="form_label check_label"> <span class="check_new_btn"></span>
+                                1</label>
                         </div>
 
                         <div class="check-btn">
                             <input type="checkbox" class="form_new_input" id="css3" name="aprender" value="css3">
-                            <label for="css3" class="form_label check_label"><span class="check_new_btn"></span>2</label>
+                            <label for="css3" class="form_label check_label"><span
+                                    class="check_new_btn"></span>2</label>
                         </div>
 
                         <div class="check-btn">
                             <input type="checkbox" class="form_new_input" id="jquery" name="aprender" value="jquery">
-                            <label for="jquery" class="form_label check_label"><span class="check_new_btn"></span>3</label>
+                            <label for="jquery" class="form_label check_label"><span
+                                    class="check_new_btn"></span>3</label>
                         </div>
 
                         <div class="check-btn">
-                            <input type="checkbox" class="form_new_input" id="wordpress" name="aprender" value="wordpress">
-                            <label for="wordpress" class="form_label check_label"><span class="check_new_btn"></span>4</label>
+                            <input type="checkbox" class="form_new_input" id="wordpress" name="aprender"
+                                value="wordpress">
+                            <label for="wordpress" class="form_label check_label"><span
+                                    class="check_new_btn"></span>4</label>
                         </div>
 
                         <div class="form_message">
@@ -153,15 +158,15 @@
                             <label for="message" class="form_message_label"> Digite aqui sua sua mensagem:</label>
                             <textarea name="mensagem" id="message" cols="30" rows="3" class="form_input message_input"
                                 required></textarea>
-    
+
                         </div>
-                        
-                    <div class="submit">    
 
-                        <input type="hidden" name="acao" value="enviar">
-                        <a href="ingressos">Comprar</a>
+                        <div class="submit">
 
-                    </div>
+                            <center> <a href="ingressos.html">Comprar</a></center>
+
+
+                        </div>
             </form>
 
         </div>
@@ -170,7 +175,7 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
-</script>
+    </script>
 <script src="/script.js"></script>
 
 </html>
